--- a/index.html
+++ b/index.html
@@ -5,130 +5,115 @@
   <title>Weekly Subscription Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f9;
-      margin: 0; padding: 20px;
-    }
+    body { font-family: Arial, sans-serif; background: #f4f6f9; margin: 0; padding: 20px; }
     h1 { text-align: center; }
-    .container {
-      max-width: 850px; margin: auto;
-      background: #fff; padding: 20px;
-      border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    input, select, button {
-      padding: 10px; margin: 5px 0; width: 100%;
-      border-radius: 6px; border: 1px solid #ccc;
-    }
-    button {
-      background: #2563eb; color: #fff; border: none;
-      cursor: pointer; font-size: 1rem;
-    }
+    .container { max-width: 850px; margin: auto; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+    input, select, button { padding: 10px; margin: 5px 0; width: 100%; border-radius: 6px; border: 1px solid #ccc; }
+    button { background: #2563eb; color: #fff; border: none; cursor: pointer; font-size: 1rem; }
     button:hover { background: #1d4ed8; }
-    table {
-      width: 100%; margin-top: 20px;
-      border-collapse: collapse;
-    }
-    th, td {
-      padding: 10px; border: 1px solid #ddd;
-      text-align: center;
-    }
-    th { background: #2563eb; color: #fff; }
-    .expired { background: #ffe5e5; color: #d32f2f; font-weight: bold; }
-    .active { background: #e6ffe6; color: #2e7d32; font-weight: bold; }
-    .btn-small {
-      padding: 5px 10px;
-      border-radius: 4px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      margin: 2px;
-    }
+    #search { width: 100%; padding: 10px; margin: 15px 0; border: 1px solid #ccc; border-radius: 6px; }
+    .exp-list { list-style: none; padding: 0; margin: 0; }
+    .exp-item { background: #e6ffe6; margin-bottom: 10px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.06); padding: 0; transition: background 0.2s; }
+    .exp-item.expired { background: #ffe5e5; }
+    .exp-header { cursor: pointer; padding: 15px; font-weight: bold; font-size: 1.1rem; color: #2563eb; display: flex; align-items: center; justify-content: space-between; }
+    .exp-header .status { font-size: 0.95rem; font-weight: normal; padding: 2px 8px; border-radius: 8px; }
+    .exp-header .status.active { background: #e6ffe6; color: #2e7d32; }
+    .exp-header .status.expired { background: #ffe5e5; color: #d32f2f; }
+    .exp-content { display: none; padding: 12px 18px 16px 18px; border-top: 1px solid #ddd; font-size: 0.97rem; background: #fff; border-radius: 0 0 8px 8px; animation: fadeIn 0.2s; }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .btn-small { padding: 5px 10px; border-radius: 4px; font-size: 0.9rem; cursor: pointer; margin: 2px; }
     .btn-delete { background: #e53935; color: #fff; border: none; }
     .btn-delete:hover { background: #c62828; }
     .btn-renew { background: #43a047; color: #fff; border: none; }
     .btn-renew:hover { background: #2e7d32; }
-    #search {
-      width: 100%;
-      padding: 10px;
-      margin: 15px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
+    .deleted-section { margin-top: 40px; background: #fff7e6; border-radius: 8px; padding: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.07); }
+    .deleted-title { color: #d32f2f; font-weight: bold; margin-bottom: 10px; }
+    .deleted-list .exp-header { color: #d32f2f; }
+    .deleted-list .exp-item { background: #fff7e6; }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Weekly Subscription Tracker</h1>
 
+    <input type="text" id="name" placeholder="Name">
     <input type="tel" id="phone" placeholder="Phone Number">
     <input type="number" id="amount" placeholder="Amount Paid">
     <select id="clientType">
       <option value="Client">Client</option>
       <option value="Not Mine">Not Mine</option>
     </select>
+    <input type="date" id="startDate" placeholder="Select start date">
     <button onclick="addSubscription()">Add Subscription</button>
 
     <input type="text" id="search" placeholder="Search by phone number..." onkeyup="searchSubscriptions()">
 
-    <table id="subTable">
-      <thead>
-        <tr>
-          <th>Phone</th>
-          <th>Amount</th>
-          <th>Client Type</th>
-          <th>Start Date</th>
-          <th>End Date</th>
-          <th>Status</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <ul id="subList" class="exp-list"></ul>
+    <div class="deleted-section" id="deletedSection" style="display:none;">
+      <div class="deleted-title">Deleted Names (Can be renewed if paid):</div>
+      <ul id="deletedList" class="exp-list deleted-list"></ul>
+    </div>
   </div>
 
   <script>
     let subscriptions = JSON.parse(localStorage.getItem("subscriptions")) || [];
+    let deletedSubscriptions = JSON.parse(localStorage.getItem("deletedSubscriptions")) || [];
 
     function saveSubscriptions() {
       localStorage.setItem("subscriptions", JSON.stringify(subscriptions));
+      localStorage.setItem("deletedSubscriptions", JSON.stringify(deletedSubscriptions));
     }
 
     function addSubscription() {
+      const name = document.getElementById("name").value.trim();
       const phone = document.getElementById("phone").value.trim();
       const amount = document.getElementById("amount").value.trim();
       const clientType = document.getElementById("clientType").value;
+      const startDateInput = document.getElementById("startDate").value;
 
-      if (!phone || !amount) {
+      if (!name || !phone || !amount || !startDateInput) {
         alert("Please fill in all fields");
         return;
       }
 
-      const today = new Date();
-      const expiry = new Date(today);
-      expiry.setDate(today.getDate() + 7);
+      // Dates
+      const start = new Date(startDateInput);
+      const expiry = new Date(start);
+      expiry.setDate(start.getDate() + 7);
 
       const sub = {
+        name,
         phone,
         amount: parseFloat(amount),
         clientType,
-        start: today.toLocaleDateString(),
-        end: expiry.toLocaleDateString()
+        start: start.toLocaleDateString(),
+        end: expiry.toLocaleDateString(),
+        startISO: start.toISOString(),
+        endISO: expiry.toISOString()
       };
 
       subscriptions.push(sub);
       saveSubscriptions();
-      renderTable();
+      renderList();
 
+      document.getElementById("name").value = "";
       document.getElementById("phone").value = "";
       document.getElementById("amount").value = "";
+      document.getElementById("startDate").value = "";
     }
 
     function deleteSubscription(index) {
-      if (confirm("Are you sure you want to delete this subscription?")) {
-        subscriptions.splice(index, 1);
-        saveSubscriptions();
-        renderTable();
-      }
+      const sub = subscriptions[index];
+      deletedSubscriptions.push({
+        name: sub.name,
+        phone: sub.phone,
+        clientType: sub.clientType,
+        deletedOn: new Date().toLocaleDateString()
+      });
+      subscriptions.splice(index, 1);
+      saveSubscriptions();
+      renderList();
+      renderDeletedList();
     }
 
     function renewSubscription(index) {
@@ -138,65 +123,172 @@
 
       subscriptions[index].start = today.toLocaleDateString();
       subscriptions[index].end = expiry.toLocaleDateString();
+      subscriptions[index].startISO = today.toISOString();
+      subscriptions[index].endISO = expiry.toISOString();
 
       saveSubscriptions();
-      renderTable();
+      renderList();
     }
 
-    function renderTable(filteredList = null) {
-      const tbody = document.querySelector("#subTable tbody");
-      tbody.innerHTML = "";
+    function renewDeleted(index) {
+      const sub = deletedSubscriptions[index];
+      const today = new Date();
+      const expiry = new Date(today);
+      expiry.setDate(today.getDate() + 7);
+
+      subscriptions.push({
+        name: sub.name,
+        phone: sub.phone,
+        amount: 0, // Should update if paid
+        clientType: sub.clientType,
+        start: today.toLocaleDateString(),
+        end: expiry.toLocaleDateString(),
+        startISO: today.toISOString(),
+        endISO: expiry.toISOString()
+      });
+
+      deletedSubscriptions.splice(index, 1);
+      saveSubscriptions();
+      renderList();
+      renderDeletedList();
+    }
+
+    // Auto-remove expired subscriptions before rendering
+    function autoRemoveExpired() {
+      const today = new Date();
+      let changed = false;
+      subscriptions = subscriptions.filter((sub, index) => {
+        const endDate = new Date(sub.endISO || sub.end);
+        if (today > endDate) {
+          // Move to deleted list
+          deletedSubscriptions.push({
+            name: sub.name,
+            phone: sub.phone,
+            clientType: sub.clientType,
+            deletedOn: today.toLocaleDateString()
+          });
+          changed = true;
+          return false;
+        }
+        return true;
+      });
+      if (changed) saveSubscriptions();
+    }
+
+    function renderList(filteredList = null) {
+      autoRemoveExpired(); // Remove expired before rendering
+
+      const ul = document.getElementById("subList");
+      ul.innerHTML = "";
 
       const today = new Date();
-      let reminders = [];
-
       const list = filteredList || subscriptions;
 
       list.forEach((s, index) => {
-        const endDate = new Date(s.end);
+        const endDate = new Date(s.endISO || s.end);
         let statusClass = "";
         let statusText = "";
 
         if (today > endDate) {
           statusClass = "expired";
           statusText = "Expired";
-          reminders.push(`⚠️ Subscription expired for ${s.phone} (${s.clientType})`);
         } else {
           statusClass = "active";
           statusText = "Active";
         }
 
-        const row = `<tr>
-          <td>${s.phone}</td>
-          <td>${s.amount}</td>
-          <td>${s.clientType}</td>
-          <td>${s.start}</td>
-          <td>${s.end}</td>
-          <td class="${statusClass}">${statusText}</td>
-          <td>
+        const li = document.createElement("li");
+        li.className = `exp-item ${statusClass}`;
+
+        // Header
+        const header = document.createElement("div");
+        header.className = "exp-header";
+        header.innerHTML = `
+          <span>${s.name}</span>
+          <span class="status ${statusClass}">${statusText}</span>
+        `;
+        header.onclick = function() {
+          content.style.display = content.style.display === "block" ? "none" : "block";
+        };
+
+        // Content
+        const content = document.createElement("div");
+        content.className = "exp-content";
+        content.innerHTML = `
+          <div><strong>Phone:</strong> ${s.phone}</div>
+          <div><strong>Amount:</strong> ${s.amount}</div>
+          <div><strong>Client Type:</strong> ${s.clientType}</div>
+          <div><strong>Start Date:</strong> ${s.start}</div>
+          <div><strong>End Date:</strong> ${s.end}</div>
+          <div style="margin-top:12px;">
             <button class="btn-small btn-renew" onclick="renewSubscription(${subscriptions.indexOf(s)})">Renew</button>
             <button class="btn-small btn-delete" onclick="deleteSubscription(${subscriptions.indexOf(s)})">Delete</button>
-          </td>
-        </tr>`;
-        tbody.innerHTML += row;
-      });
+          </div>
+        `;
 
-      if (!filteredList && reminders.length > 0) {
-        alert(reminders.join("\n"));
+        li.appendChild(header);
+        li.appendChild(content);
+        ul.appendChild(li);
+      });
+    }
+
+    function renderDeletedList() {
+      const section = document.getElementById("deletedSection");
+      const ul = document.getElementById("deletedList");
+      ul.innerHTML = "";
+
+      if (deletedSubscriptions.length === 0) {
+        section.style.display = "none";
+        return;
       }
+      section.style.display = "block";
+
+      deletedSubscriptions.forEach((d, index) => {
+        const li = document.createElement("li");
+        li.className = "exp-item";
+
+        // Header
+        const header = document.createElement("div");
+        header.className = "exp-header";
+        header.innerHTML = `
+          <span>${d.name}</span>
+          <span class="status expired">Deleted</span>
+        `;
+        header.onclick = function() {
+          content.style.display = content.style.display === "block" ? "none" : "block";
+        };
+
+        // Content
+        const content = document.createElement("div");
+        content.className = "exp-content";
+        content.innerHTML = `
+          <div><strong>Phone:</strong> ${d.phone}</div>
+          <div><strong>Client Type:</strong> ${d.clientType}</div>
+          <div><strong>Deleted On:</strong> ${d.deletedOn}</div>
+          <div style="margin-top:12px;">
+            <button class="btn-small btn-renew" onclick="renewDeleted(${index})">Renew</button>
+          </div>
+        `;
+
+        li.appendChild(header);
+        li.appendChild(content);
+        ul.appendChild(li);
+      });
     }
 
     function searchSubscriptions() {
       const query = document.getElementById("search").value.trim();
       if (!query) {
-        renderTable();
+        renderList();
         return;
       }
       const filtered = subscriptions.filter(s => s.phone.includes(query));
-      renderTable(filtered);
+      renderList(filtered);
     }
 
-    renderTable();
+    // Initial render
+    renderList();
+    renderDeletedList();
   </script>
 </body>
 </html>
