--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
     .btn-renew:hover { background: #2e7d32; }
     .btn-edit-missing { background: #ff9800; color: #fff; border: none; }
     .btn-edit-missing:hover { background: #e68900; }
-    .deleted-section { margin-top: 40px; background: #fff7e6; border-radius: 8px; padding: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.07); }
-    .deleted-title { color: #d32f2f; font-weight: bold; margin-bottom: 10px; }
-    .deleted-list .exp-header { color: #d32f2f; }
-    .deleted-list .exp-item { background: #fff7e6; }
     /* Modal styles */
     #editModal {
       display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
@@ -66,11 +62,6 @@
     </button>
 
     <ul id="subList" class="exp-list"></ul>
-
-    <div class="deleted-section" id="deletedSection" style="display:none;">
-      <div class="deleted-title">Deleted Names (Can be renewed):</div>
-      <ul id="deletedList" class="exp-list deleted-list"></ul>
-    </div>
   </div>
 
   <!-- Edit Modal -->
@@ -91,12 +82,10 @@
 
   <script>
     let subscriptions = JSON.parse(localStorage.getItem("subscriptions")) || [];
-    let deletedSubscriptions = JSON.parse(localStorage.getItem("deletedSubscriptions")) || [];
-    let editIndex = null, editIsDeleted = false;
+    let editIndex = null;
 
     function saveSubscriptions() {
       localStorage.setItem("subscriptions", JSON.stringify(subscriptions));
-      localStorage.setItem("deletedSubscriptions", JSON.stringify(deletedSubscriptions));
     }
 
     function addSubscription() {
@@ -112,8 +101,7 @@
       }
 
       const start = new Date(startDate);
-      const end = new Date(start);
-      end.setDate(start.getDate() + 7);
+      const end = new Date(start); end.setDate(start.getDate() + 7);
 
       subscriptions.push({
         name, phone, amount: parseFloat(amount), clientType,
@@ -131,27 +119,25 @@
     }
 
     function deleteSubscription(index) {
-      const sub = subscriptions[index];
-      deletedSubscriptions.push({ name: sub.name, phone: sub.phone, clientType: sub.clientType, deletedOn: new Date().toLocaleDateString() });
+      if (!confirm("Are you sure you want to permanently delete this subscription?")) return;
       subscriptions.splice(index, 1);
       saveSubscriptions();
       renderList();
-      renderDeletedList();
     }
 
-    function openEditModal(index, isDeleted) {
-      editIndex = index; editIsDeleted = isDeleted;
-      const s = isDeleted ? deletedSubscriptions[index] : subscriptions[index];
+    function openEditModal(index) {
+      editIndex = index;
+      const s = subscriptions[index];
       document.getElementById("editName").value = s.name || "";
       document.getElementById("editPhone").value = s.phone || "";
-      document.getElementById("editAmount").value = isDeleted ? "" : (s.amount || "");
+      document.getElementById("editAmount").value = s.amount || "";
       document.getElementById("editClientType").value = s.clientType || "Client";
       document.getElementById("editModal").style.display = "flex";
     }
 
     function closeEditModal() {
       document.getElementById("editModal").style.display = "none";
-      editIndex = null; editIsDeleted = false;
+      editIndex = null;
     }
 
     function confirmEditRenew() {
@@ -160,26 +146,17 @@
       const amount = document.getElementById("editAmount").value.trim();
       const clientType = document.getElementById("editClientType").value;
 
-      if (!phone) { alert("Phone number is required."); return; }
+      if (!phone || !amount) { alert("Phone and amount are required."); return; }
 
       const today = new Date();
       const end = new Date(today); end.setDate(today.getDate() + 7);
 
-      if (editIsDeleted) {
-        deletedSubscriptions.splice(editIndex, 1);
-        subscriptions.push({
-          name, phone, amount: amount ? parseFloat(amount) : 0, clientType,
-          start: today.toLocaleDateString(), end: end.toLocaleDateString(),
-          startISO: today.toISOString(), endISO: end.toISOString()
-        });
-        renderDeletedList();
-      } else {
-        Object.assign(subscriptions[editIndex], {
-          name, phone, amount: parseFloat(amount), clientType,
-          start: today.toLocaleDateString(), end: end.toLocaleDateString(),
-          startISO: today.toISOString(), endISO: end.toISOString()
-        });
-      }
+      Object.assign(subscriptions[editIndex], {
+        name, phone, amount: parseFloat(amount), clientType,
+        start: today.toLocaleDateString(), end: end.toLocaleDateString(),
+        startISO: today.toISOString(), endISO: end.toISOString()
+      });
+
       saveSubscriptions();
       renderList();
       closeEditModal();
@@ -190,17 +167,15 @@
       if (!phone) return;
       const index = subscriptions.findIndex(s => s.phone === phone && !s.name);
       if (index === -1) { alert("No record found with missing name."); return; }
-      openEditModal(index, false);
+      openEditModal(index);
     }
 
     function autoRemoveExpired() {
-      const today = new Date(); let changed = false;
+      const today = new Date();
+      let changed = false;
       subscriptions = subscriptions.filter(sub => {
         const end = new Date(sub.endISO || sub.end);
-        if (today > end) {
-          deletedSubscriptions.push({ name: sub.name, phone: sub.phone, clientType: sub.clientType, deletedOn: today.toLocaleDateString() });
-          changed = true; return false;
-        }
+        if (today > end) { changed = true; return false; }
         return true;
       });
       if (changed) saveSubscriptions();
@@ -227,60 +202,21 @@
           </span>
           <span class="status ${status}">${statusText}</span>
         `;
-        header.onclick = () => content.style.display = content.style.display === "block" ? "none" : "block";
-
         const content = document.createElement("div");
         content.className = "exp-content";
         content.innerHTML = `
           <div><strong>Phone:</strong> ${s.phone}</div>
-          <div><strong>Amount:</strong> ${s.amount || ""}</div>
+          <div><strong>Amount:</strong> ${s.amount}</div>
           <div><strong>Client Type:</strong> ${s.clientType}</div>
           <div><strong>Start:</strong> ${s.start}</div>
           <div><strong>End:</strong> ${s.end}</div>
           <div style="margin-top:10px;">
-            <button class="btn-small btn-renew" onclick="openEditModal(${subscriptions.indexOf(s)}, false)">Renew & Edit</button>
-            <button class="btn-small btn-delete" onclick="deleteSubscription(${subscriptions.indexOf(s)})">Delete</button>
-            ${!s.name ? `<button class="btn-small btn-edit-missing" onclick="openEditModal(${subscriptions.indexOf(s)}, false)">Re-edit Name</button>` : ""}
+            <button class="btn-small btn-renew" onclick="openEditModal(${i})">Renew & Edit</button>
+            <button class="btn-small btn-delete" onclick="deleteSubscription(${i})">Delete</button>
+            ${!s.name ? `<button class="btn-small btn-edit-missing" onclick="openEditModal(${i})">Re-edit Name</button>` : ""}
           </div>
-        `;
-
-        li.appendChild(header);
-        li.appendChild(content);
-        ul.appendChild(li);
-      });
-    }
-
-    function renderDeletedList() {
-      const ul = document.getElementById("deletedList"); ul.innerHTML = "";
-      const section = document.getElementById("deletedSection");
-      if (!deletedSubscriptions.length) { section.style.display = "none"; return; }
-      section.style.display = "block";
-
-      deletedSubscriptions.forEach((d, i) => {
-        const li = document.createElement("li");
-        li.className = "exp-item";
-
-        const header = document.createElement("div");
-        header.className = "exp-header";
-        header.innerHTML = `
-          <span>${d.name || "<em style='color:red;'>Name Missing</em>"} 
-            <span style="color:#2563eb;font-size:0.9em;margin-left:8px;">${d.phone}</span>
-          </span>
-          <span class="status expired">Deleted</span>
         `;
         header.onclick = () => content.style.display = content.style.display === "block" ? "none" : "block";
-
-        const content = document.createElement("div");
-        content.className = "exp-content";
-        content.innerHTML = `
-          <div><strong>Phone:</strong> ${d.phone}</div>
-          <div><strong>Client Type:</strong> ${d.clientType}</div>
-          <div><strong>Deleted On:</strong> ${d.deletedOn}</div>
-          <div style="margin-top:10px;">
-            <button class="btn-small btn-renew" onclick="openEditModal(${i}, true)">Renew & Edit</button>
-            ${!d.name ? `<button class="btn-small btn-edit-missing" onclick="openEditModal(${i}, true)">Re-edit Name</button>` : ""}
-          </div>
-        `;
 
         li.appendChild(header);
         li.appendChild(content);
@@ -293,7 +229,7 @@
       renderList(q ? subscriptions.filter(s => s.phone.includes(q)) : subscriptions);
     }
 
-    renderList(); renderDeletedList();
+    renderList();
   </script>
 </body>
 </html>
